--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,10 +1,17 @@
 appname = new_project
-httpport = 8080
+httpport = 8181
 runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
-sqlconn = 
+sqlconn =
+
+# mysql配置
+dbUser = root
+dbPassword = 12345678
+dbHost = 127.0.0.1
+dbPort = 3306
+dbName = video
 
 
-aut_url = http://api.zs.fxcm-asia.com/api/admin/invite/check_code
+aut_url = http://api.zs.fxcm-asia.com/api/admin/invite/get_equipment
