--- a/conf/app.conf
+++ b/conf/app.conf
@@ -8,8 +8,8 @@ sqlconn =
 
 # mysql配置
 dbUser = root
-dbPassword = 12345678
-dbHost = 127.0.0.1
+dbPassword = root
+dbHost = 192.168.0.42
 dbPort = 3306
 dbName = video
 
