增加 播放视频接口 增加aes加密

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -13,5 +13,8 @@ dbHost = 192.168.0.42
 dbPort = 3306
 dbName = video
 
-
 aut_url = http://api.zs.fxcm-asia.com/api/admin/invite/get_equipment
+# 允许视频的大小
+maxSize = 20971520
+# 默认封面的地址
+defaultImg = /static/default.jpg
